--- a/index.html
+++ b/index.html
@@ -19,33 +19,6 @@
   </head>
   <body>
 
-	<!-- MENU 
-		<nav class="navbar fixed-top navbar-expand-sm cyan lighten-4">
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar8">
-					<span class="navbar-toggler-icon"></span>
-			</button>
-			<span class="navbar-text">&nbsp;</span>
-			<div class="navbar-collapse collapse" id="navbar8">
-					<ul class="navbar-nav ml-auto">
-							<li class="nav-item" id="nav-menu-link-container">
-									<a class="nav-link" href="#">NORDHOLD</a>
-							</li>
-							<li class="nav-item" id="nav-menu-link-container">
-									<a class="nav-link" href="#">O nas</a>
-							</li>
-							<li class="nav-item" id="nav-menu-link-container">
-									<a class="nav-link" href="#">Produkty</a>
-							</li>
-							<li class="nav-item" id="nav-menu-link-container">
-									<a class="nav-link" href="#">Gdzie kupić?</a>
-							</li>
-							<li class="nav-item" id="nav-menu-link-container">
-									<a class="nav-link" href="#">Kontakt</a>
-							</li>
-					</ul>						
-			</div>
-	</nav>
--->
 <!--Navbar-->
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark mr-sm-2 blue" id="menu-navbar">
     <!-- Collapse button -->
@@ -93,6 +66,8 @@
 
 	<!--header hero img-->
 	<section class="header">
+	<div class="sliding-background"></div>
+	<div id="header-mountains"></div>
 	<div id="header-logo-big"></div>
 	<div id="header-logo-big2"></div>
 	<div id=header-desc>
@@ -101,8 +76,57 @@
 		<p id="header-desc-text">
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit amet sem tempor, malesuada metus at, pulvinar erat. Pellentesque euismod tempor purus at dictum. Praesent sed sem orci. Proin nec volutpat eros, a semper urna. Fusce porta odio vitae mi posuere efficitur. Quisque ut elit eu libero placerat placerat a pharetra lectus.
 		</p>
-	</div>
+	</div>	
 	</section>
+
+	<section class="fullpage" id="about-us">
+			<div id="header-bg-filler">				
+			
+			<div class="row">
+					<div class="col-lg-3 col-md-12" id="about-us-card">				
+						<div class="card card-body">
+							<h4 class="card-title">Panel title</h4>
+							<p class="card-text"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
+							<div class="flex-row">
+								<a class="card-link">Card link</a>
+								<a class="card-link">Another link</a>
+							</div>
+						</div>			
+					</div>					
+					<div class="col-lg-3 col-md-12" id="about-us-card">				
+							<div class="card card-body">
+								<h4 class="card-title">Panel title</h4>
+								<p class="card-text"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
+								<div class="flex-row">
+									<a class="card-link">Card link</a>
+									<a class="card-link">Another link</a>
+								</div>
+							</div>			
+					</div>			
+					<div class="col-lg-3 col-md-12" id="about-us-card">				
+								<div class="card card-body">
+									<h4 class="card-title">Panel title</h4>
+									<p class="card-text"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
+									<div class="flex-row">
+										<a class="card-link">Card link</a>
+										<a class="card-link">Another link</a>
+									</div>
+								</div>			
+					</div>
+					<div class="col-lg-3 col-md-12" id="about-us-card">				
+								<div class="card card-body">
+									<h4 class="card-title">Panel title</h4>
+									<p class="card-text"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
+									<div class="flex-row">
+										<a class="card-link">Card link</a>
+										<a class="card-link">Another link</a>
+									</div>
+								</div>			
+					</div>			
+			</div>					
+		</div>
+	</section>
+
 	<div class="fancybg">
 	<svg id="demo" viewBox="0 0 1600 600" preserveAspectRatio="xMidYMid slice">
 			<defs>
