--- a/index.html
+++ b/index.html
@@ -68,17 +68,23 @@
 	<section class="header">
 	<div class="sliding-background"></div>
 	<div id="header-mountains"></div>
-	<div id="header-logo-big"></div>
-	<div id="header-logo-big2"></div>
-	<div id=header-desc>
-		<h1 id="header-desc-text">Lorem ipsum dolor sit amet</h1>
-
-		<p id="header-desc-text">
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit amet sem tempor, malesuada metus at, pulvinar erat. Pellentesque euismod tempor purus at dictum. Praesent sed sem orci. Proin nec volutpat eros, a semper urna. Fusce porta odio vitae mi posuere efficitur. Quisque ut elit eu libero placerat placerat a pharetra lectus.
-		</p>
-	</div>	
+	
+	
 	</section>
 
+	<section class="fullpage">
+			<div id="header-logo-big"></div>
+			<div id="header-logo-big2"></div>
+		<div id="header-desc">
+			<h1 id="header-desc-text">Lorem ipsum dolor sit amet</h1>
+			
+			<p id="header-desc-text">
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit amet sem tempor, malesuada metus at, pulvinar erat. Pellentesque euismod tempor purus at dictum. Praesent sed sem orci. Proin nec volutpat eros, a semper urna. Fusce porta odio vitae mi posuere efficitur. Quisque ut elit eu libero placerat placerat a pharetra lectus.
+			</p>
+		</div>	
+	</section>
+	
+<!--
 	<section class="fullpage" id="about-us">
 			<div id="header-bg-filler">				
 			
@@ -102,7 +108,7 @@
 									<a class="card-link">Another link</a>
 								</div>
 							</div>			
-					</div>			
+					</div>
 					<div class="col-lg-3 col-md-12" id="about-us-card">				
 								<div class="card card-body">
 									<h4 class="card-title">Panel title</h4>
@@ -143,7 +149,8 @@
 			<rect id="rect2" x="0" y="0" width="1600" height="600" stroke="none" fill="url(#grad2)"></rect>
 		</svg>
 	</div>			
-
+-->
+<section class="fullpage"></section>
 	<section class="fullpage" id="products">
 		<div class="container" id="products-container">
 			<div class="row">
