--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.0/css/mdb.min.css" rel="stylesheet">	
 
 		<link rel="stylesheet" href="css/main.css">
-		<link rel="stylesheet" href="css/style.css">
-		<link rel="stylesheet" href="css/productselector.css">
     <title>Nordhold</title>
   </head>
   <body>
@@ -21,7 +19,7 @@
 <section data-include="navigation"></section>	
 <section data-include="background"></section>	
 
-<section class="content" data-include="home">		
+<section class="content" data-include="products">		
 
 </section>
 
@@ -35,5 +33,8 @@
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.0/js/mdb.min.js"></script>
 		<script type="text/javascript" src="js/components.js"></script>
 		<script type="text/javascript" src="js/navigation.js"></script>
+		<script type="text/javascript" src="js/colorselect.js"></script>
+		<script type="text/javascript" src="js/productdetailhover.js"></script>
+		
   </body>
 </html>
