--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@
   </head>
   <body>
 
-<section data-include="navigation"></section>	
-<section data-include="background"></section>	
+      <section data-include="navigation"></section>	
+      <section data-include="background"></section>	
 
-<section class="content" data-include="products">		
-
-</section>
+      <section class="content" data-include="store"></section>
 
 
     <!-- Optional JavaScript -->
