--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <section data-include="navigation"></section>	
       <section data-include="background"></section>	
 
-      <section class="content" data-include="store"></section>
+      <section class="content" data-include="home"></section>
 
 
     <!-- Optional JavaScript -->
